# arbiter

./: CMakeLists.txt  README.md  TODO.md  arbiters.bib  build.sh  index.html
_cmake/: CompilerFlags.cmake  config.cmake
_cmake/compilers/: gcc49.cmake
_keys/: brip_dev_key.pub  brip_master_key.pub  brip_release_key.pub
_notes/: Notes.md
arbiter/: CMakeLists.txt  Exceptions.hpp  Gap.hpp  SequencArbiter.hpp  SequenceArbiter.hpp
arbiter/details/: ArbiterCache.hpp  ArbiterCacheAdvancer.hpp  ArbiterCacheAdvancerContext.hpp  ArbiterCacheAdvancerState.hpp  ArbiterCacheAdvancerStateEnum.hpp  LineSet.hpp  NullErrorReportingPolicy.hpp  SequenceCount.hpp  SequenceInfo.hpp
arbiter/details/states/: AdvanceHead.hpp  AdvanceLine.hpp  ArbiterStatesPack.hpp  GapFill.hpp  HeadForwardGapFill.hpp  InitialState.hpp  LineForwardGapFill.hpp
arbiter/src/: Dummy.cpp  Exceptions.cpp  LineSet.cpp
arbiter/tests/unit_test/: CMakeLists.txt  SequenceCount-UT.cpp  testLineSet-UT.cpp  testSequenceArbiter-UT.cpp  testSequenceCount-UT.cpp  testSequenceInfo-UT.cpp
arbiter/tests/unit_test/platform/: UnitTestSupport.hpp
